--- a/WpfApp4/MainWindow.xaml
+++ b/WpfApp4/MainWindow.xaml
@@ -6,5 +6,7 @@
         xmlns:local="clr-namespace:WpfApp4"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    
+    <Grid>
+        <Button x:Name="openButton"  Content="開啟新文件" HorizontalAlignment="Left" Margin="95,90,0,0" VerticalAlignment="Top" Height="94" Width="215" Click="openButton_Click"/>
+    </Grid>
 </Window>
